[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"
authors = []
homepage = "https://celo.org"
repository = "https://github.com/celo-org/celo-kona"
readme = "README.md"
version = "1.0.0"
keywords = ["ethereum", "optimism", "celo", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  "bin/*",
  "crates/alloy-celo-evm",
  "crates/celo-alloy/*",
  "crates/celo-reth",
  "crates/celo-revm",
  "crates/celo-otel",
  "crates/kona/*",
  "examples/*",
]
default-members = [
  "bin/host",
  "bin/client",
  "bin/execution-verifier",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[workspace.dependencies]
# Workspace
celo-client = { version = "1.0.0", path = "bin/client", default-features = false }
celo-alloy-consensus = { version = "1.0.0", path = "crates/celo-alloy/consensus", default-features = false }
celo-alloy-rpc-types-engine = { version = "1.0.0", path = "crates/celo-alloy/rpc-types-engine", default-features = false }
celo-alloy-rpc-types = { version = "1.0.0", path = "crates/celo-alloy/rpc-types", default-features = false }
celo-alloy-network = { version = "1.0.0", path = "crates/celo-alloy/network", default-features = false }
alloy-celo-evm = { version = "1.0.0", path = "crates/alloy-celo-evm", default-features = false }
celo-executor = { version = "1.0.0", path = "crates/kona/executor", default-features = false }
celo-driver = { version = "1.0.0", path = "crates/kona/driver", default-features = false }
celo-proof = { version = "1.0.0", path = "crates/kona/proof", default-features = false }
celo-protocol = { version = "1.0.0", path = "crates/kona/protocol", default-features = false }
celo-genesis = { version = "1.0.0", path = "crates/kona/genesis", default-features = false }
celo-revm = { version = "1.0.0", path = "crates/celo-revm", default-features = false }
celo-registry = { version = "1.0.0", path = "crates/kona/registry", default-features = false }
celo-otel = { version = "1.0.0", path = "crates/celo-otel", default-features = false }
celo-reth = { version = "0.1.0", path = "crates/celo-reth", default-features = false }

# Binaries
kona-host = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-client = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }

# Protocol
kona-driver = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-derive = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-genesis = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-protocol = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-registry = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }

# Providers
kona-providers-alloy = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }

# Proof
kona-mpt = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-proof = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-executor = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-std-fpvm = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-preimage = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
kona-std-fpvm-proc = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }

# Utilities
kona-cli = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }

# Alloy
alloy-rlp = { version = "0.3.13", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }
alloy-chains = { version = "0.2.33", default-features = false }
alloy-hardforks = { version = "0.4.7", default-features = false }
alloy-sol-types = { version = "1.5.6", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false }
# We should pin these alloy crates version to apply below patches. The patches won't used in the crate
# graph if those have a different version from what is locked in the Cargo.lock file.
alloy-eips = { version = "=2.0.4", default-features = false }
alloy-serde = { version = "=2.0.4", default-features = false }
alloy-signer = { version = "=2.0.4", default-features = false }
alloy-network = { version = "=2.0.4", default-features = false }
alloy-genesis = { version = "=2.0.4", default-features = false }
alloy-provider = { version = "=2.0.4", default-features = false }
alloy-consensus = { version = "=2.0.4", default-features = false }
alloy-transport = { version = "=2.0.4", default-features = false }
alloy-rpc-types = { version = "=2.0.4", default-features = false }
alloy-rpc-client = { version = "=2.0.4", default-features = false }
alloy-rpc-types-eth = { version = "=2.0.4", default-features = false }
alloy-transport-http = { version = "=2.0.4", default-features = false }
alloy-rpc-types-engine = { version = "=2.0.4", default-features = false }
alloy-network-primitives = { version = "=2.0.4", default-features = false }

# OP Alloy
alloy-op-hardforks = { version = "0.5.0", default-features = false }
op-alloy-consensus = { version = "2.0.0", default-features = false }
op-alloy-rpc-types = { version = "2.0.0", default-features = false }
op-alloy-rpc-types-engine = { version = "2.0.0", default-features = false }

# Execution
revm = { version = "38.0.0", default-features = false }
op-revm = { version = "20.0.0", default-features = false }
alloy-evm = { version = "0.34.0", default-features = false }
alloy-op-evm = { version = "0.32.0", default-features = false }

# Dependencies not in upstream kona-client
# These are kept separately to make it easier to compare and update the versions above
revm-context-interface = { version = "17.0.1", default-features = false }
revm-handler = { version = "18.1.0", default-features = false }

# Reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-codecs = { version = "0.3.1", default-features = false, features = ["alloy"] }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-primitives-traits = { version = "0.3.1", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-traits = { version = "0.3.1", default-features = false }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-etl = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-config = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }

# OP Reth
reth-optimism-chainspec = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
reth-optimism-cli = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
reth-optimism-consensus = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
reth-optimism-evm = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
reth-optimism-exex = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
reth-optimism-forks = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
reth-optimism-node = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
reth-optimism-payload-builder = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1", default-features = false }
reth-optimism-rpc = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
reth-optimism-storage = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
reth-optimism-trie = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
reth-optimism-txpool = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }

# Hokulea
# celo-org/hokulea karlb/version-bump — fork pinned at the kona-node/v1.5.1
# bump (commit b717a24). Switch back to upstream Layr-Labs/hokulea once
# a hokulea-client release with v1.5.x support is cut.
hokulea-eigenda = { git = "https://github.com/celo-org/hokulea", rev = "b717a24bc6f95f196fc2515add000c1b091ee5ff", default-features = false }
hokulea-proof = { git = "https://github.com/celo-org/hokulea", rev = "b717a24bc6f95f196fc2515add000c1b091ee5ff", default-features = false }
hokulea-host-bin = { git = "https://github.com/celo-org/hokulea", rev = "b717a24bc6f95f196fc2515add000c1b091ee5ff", default-features = false }

# General
url = { version = "2.5.8", default-features = false }
spin = "0.10.0"
clap = { version = "4.5.58", features = ["derive"] }
tokio = { version = "1.49.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
cfg-if = "1.0.4"
rstest = "0.26.1"
tempfile = "3.24.0"
arbitrary = "1.4.2"
async-trait = "0.1.89"
unsigned-varint = "0.8.0"

rand = { version = "0.9.2", default-features = false }
anyhow = { version = "1.0.101", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
derive_more = { version = "2.1.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }

bytes = { version = "1.11.0", default-features = false }
eyre = "0.6.12"
modular-bitfield = "0.13.1"
auto_impl = "1.3.0"
bincode = "2.0.1"
similar-asserts = "1.7"
reqwest = { version = "0.13.2", default-features = false }

# Compression
miniz_oxide = "0.9.0"
brotli = { version = "8.0.2", default-features = false }
zstd = "0.13"
toml = { version = "0.9", default-features = false, features = ["parse"] }

# Tracing
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tracing = { version = "0.1.44", default-features = false }

# RPC
jsonrpsee = "0.26.0"
jsonrpsee-types = "0.26.0"
metrics = "0.24"

# Serialization
serde_repr = "0.1.20"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
serde_with = { version = "3", default-features = false, features = ["macros"] }

# K/V database
rocksdb = { version = "0.24.0", default-features = false }

# Cryptography
ark-ff = { version = "0.5.0", default-features = false }

# Tracing and telemetry
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.30.0", features = ["default", "metrics", "grpc-tonic", "logs"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry-appender-tracing = "0.30.1"
uuid = { version = "1", features = ["v4"] }

[patch.crates-io]
# We patch alloy-eips to a version where fake_exponential does not overflow when provided with large inputs.
alloy-eips = { git = "https://github.com/celo-org/alloy", branch = "fix-fake-exponential-2.0.4" }
# We also need to patch alloy-serde to this version since otherwise a different non patch version is also included in the project
# which breaks trait bound satisfaction
alloy-serde = { git = "https://github.com/celo-org/alloy", branch = "fix-fake-exponential-2.0.4" }
# Pin op-alloy / alloy-op-* / op-revm to the optimism monorepo's in-tree copies
# at the kona-node/v1.5.1 tag, so all kona/op-reth/op-alloy dependencies resolve
# to a single source (the kona crates use the in-tree copies).
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
op-alloy-rpc-types-engine = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
op-alloy-rpc-types = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
op-alloy-network = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
alloy-op-hardforks = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
alloy-op-evm = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
op-revm = { git = "https://github.com/ethereum-optimism/optimism", tag = "kona-node/v1.5.1" }
