[package]
name = "alloy-celo-evm"
description = "Celo EVM implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
celo-alloy-consensus.workspace = true

alloy-evm = { workspace = true, features = ["op"] }
alloy-op-evm = { workspace = true, default-features = false }

alloy-consensus.workspace = true
alloy-primitives.workspace = true

op-alloy-consensus.workspace = true

revm.workspace = true
op-revm.workspace = true
celo-revm = { workspace = true, features = ["alloy-op-evm"] }
spin.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-eips.workspace = true
alloy-op-hardforks.workspace = true
# Tests exercise RPC-simulation paths that need to disable the base-fee check.
revm = { workspace = true, features = ["optional_no_base_fee"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "revm/std",
    "alloy-evm/std",
    "op-revm/std",
    "alloy-consensus/std",
    "op-alloy-consensus/std"
]
# Enables accumulation of every `Cip64ReceiptData` in `Cip64Storage::all_entries`,
# intended purely for post-execution inspection in tests. Leaving this on in
# production would be a monotonic memory leak on long-running nodes (celo-reth),
# since `store_cip64_info` is called for every CIP-64 tx. Enabled via dev-deps
# in `kona-executor` so its unit tests can verify CIP-64 gas accounting against
# op-geth fixtures; production binaries must never enable it.
test-utils = []
# Passthrough of revm's `optional_no_base_fee` feature, gating the simulation-only
# code paths that read/write `CfgEnv::disable_base_fee`. Enable on RPC-serving
# binaries (celo-reth); leave off on consensus-strict ones (kona) so the
# base-fee check cannot be bypassed.
optional_no_base_fee = ["celo-revm/optional_no_base_fee"]

# `dev` is a no-op marker feature so the workspace-level
# `additional_cargo_test_args = ["--features", "dev"]` in `.cargo/mutants.toml`
# resolves on this crate too. celo-revm's `dev` feature gates additional
# `optional_balance_check` / `optional_no_base_fee` cfg fields used in
# mutation-targeted tests; alloy-celo-evm doesn't need any of those, so this
# feature is intentionally empty.
dev = []
