[package]
name = "alloy-celo-evm"
description = "Celo EVM implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
celo-alloy-consensus.workspace = true

alloy-evm.workspace = true
alloy-op-evm = { workspace = true, default-features = false }
alloy-op-hardforks.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

op-alloy-consensus.workspace = true

revm.workspace = true
op-revm.workspace = true
celo-revm = { workspace = true, features = ["alloy-op-evm"] }
spin.workspace = true
tracing.workspace = true

# Optional: metrics are only emitted on the std (node) build; the no-std FPVM
# build does not record them.
metrics = { workspace = true, optional = true }

[dev-dependencies]
# Tests exercise RPC-simulation paths that need to disable the base-fee check.
revm = { workspace = true, features = ["optional_no_base_fee"] }
# Test-only: a local recorder to assert the std-only skip metric is emitted.
metrics-util = "0.20"
# Test-only: cross-check the generated upgrade18 data against res/predeploys.json.
serde_json = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "revm/std",
    "alloy-evm/std",
    "op-revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "op-alloy-consensus/std",
    "dep:metrics",
]
# Enables accumulation of every `Cip64ReceiptData` in `Cip64Storage::all_entries`,
# intended purely for post-execution inspection in tests. Leaving this on in
# production would be a monotonic memory leak on long-running nodes (celo-reth),
# since `store_cip64_info` is called for every CIP-64 tx. Enabled via dev-deps
# in `kona-executor` so its unit tests can verify CIP-64 gas accounting against
# op-geth fixtures; production binaries must never enable it.
test-utils = []
# Passthrough of revm's `optional_no_base_fee` feature, gating the simulation-only
# code paths that read/write `CfgEnv::disable_base_fee`. Enable on RPC-serving
# binaries (celo-reth); leave off on consensus-strict ones (kona) so the
# base-fee check cannot be bypassed.
optional_no_base_fee = ["celo-revm/optional_no_base_fee"]
