[package]
name = "celo-otel"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]


# general
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true


# logging and telemetry
tracing-subscriber = { workspace = true, features = ["env-filter"] }
console-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true
