[package]
name = "celo-otel"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]


# general
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true


# logging and telemetry
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true
