[package]
name = "celo-reth"
description = "Celo EVM configuration for reth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "celo-reth"
path = "src/bin/celo_reth.rs"
required-features = ["std"]

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-cli.workspace = true
reth-cli-commands.workspace = true
reth-cli-runner.workspace = true
reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-db-common.workspace = true
reth-engine-local.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-fs-util.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-storage-errors.workspace = true
reth-node-builder.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-metrics.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-traits.workspace = true
reth-rpc-eth-types.workspace = true

# Ethereum
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true
alloy-sol-types.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-op-evm.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-network.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Optimism
reth-optimism-chainspec.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-node.workspace = true
reth-optimism-storage.workspace = true
reth-optimism-payload-builder.workspace = true
reth-payload-util.workspace = true
reth-optimism-txpool.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-rpc.workspace = true
# Historical-proofs ExEx (Bounded History Sidecar) — used by the celo-reth
# binary only, but living in the main deps list keeps the workspace tidy.
# `metrics` feature is required so that `OpProofsStorage<S>` resolves to the
# `OpProofsStorageWithMetrics<S>` wrapper (alias toggle in trie/src/lib.rs).
# Without it, `EthApiExt::new` (which expects the wrapped form) fails to
# typecheck — and we lose the proof-storage metrics emitted from the wrapper.
reth-optimism-exex.workspace = true
reth-optimism-trie = { workspace = true, features = ["metrics"] }
# Needed only to name the launcher builder type `NodeBuilder<DatabaseEnv, _>`
# in the proofs-history helper (binary-only). Mirrors op-reth's proof_history.rs.
reth-db.workspace = true
futures-util.workspace = true

# Celo
celo-alloy-consensus = { workspace = true, features = ["reth", "serde"] }
celo-alloy-rpc-types.workspace = true
# optional_no_base_fee is required in production: reth sets disable_base_fee=true
# for eth_call and gas estimation RPCs. Without this feature those calls would fail
# with "insufficient funds for gas" because the base fee check cannot be skipped.
# Enabled here only — kona crates depend on alloy-celo-evm without it so the
# base-fee check cannot be bypassed in the ZK proof client.
alloy-celo-evm = { workspace = true, features = ["optional_no_base_fee"] }
celo-revm = { workspace = true, features = ["alloy-op-evm", "optional_no_base_fee"] }

# Revm
revm.workspace = true
op-revm.workspace = true

# Reth codecs and db
reth-codecs.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-prune-types.workspace = true
reth-stages-types.workspace = true
reth-static-file.workspace = true
reth-static-file-types.workspace = true

# RPC
jsonrpsee.workspace = true
jsonrpsee-types.workspace = true

# Misc
alloy-rlp.workspace = true
bytes.workspace = true
clap.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync", "time"] }
toml.workspace = true
tracing.workspace = true
metrics.workspace = true
reth-cli-util.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
proptest = "1.11"

[features]
default = ["std"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-primitives/std",
    "alloy-evm/std",
    "alloy-op-evm/std",
    "op-alloy-consensus/std",
    "op-alloy-rpc-types-engine/std",
    "op-revm/std",
    "revm/std",
    "reth-chainspec/std",
    "reth-evm/std",
    "reth-primitives-traits/std",
    "reth-optimism-chainspec/std",
    "reth-optimism-forks/std",
    "reth-optimism-primitives/std",
    "reth-optimism-evm/std",
]
