# TODO: remove unnecessary dependencies
[package]
name = "celo-revm"
description = "Celo variant of Revm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
celo-alloy-consensus.workspace = true

# revm
revm = { workspace = true, features = ["secp256r1"] }
op-revm = { workspace = true, features = ["serde"] }
revm-context-interface.workspace = true
revm-handler.workspace = true
revm-context.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-evm.workspace = true
op-alloy-consensus.workspace = true
alloy-sol-types.workspace = true

## static precompile sets.
#once_cell = { workspace = true, features = ["alloc"] }

# misc
auto_impl.workspace = true
lazy_static = { workspace = true, features = ["spin_no_std"] }
thiserror.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
#sha2.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
rand = { workspace = true, features = ["std"] }
bincode = { workspace = true, features = ["serde"] }
alloy-eips.workspace = true

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst"]
std = [
    "serde?/std",
    "revm/std",
#    "alloy-sol-types/std",
#    "once_cell/std",
#    "sha2/std",
#    "serde_json/std",
]
hashbrown = ["revm/hashbrown"]
serde = [
    "dep:serde",
    "revm/serde",
    "op-alloy-consensus/serde",
]
portable = ["revm/portable"]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
]
memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_eip3607 = ["revm/optional_eip3607"]
optional_no_base_fee = ["revm/optional_no_base_fee"]

# See comments in `revm-precompile`
secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
# `kzg-rs` is not audited but useful for `no_std` environment, use it with causing and default to `c-kzg` if possible.
kzg-rs = ["revm/kzg-rs"]
blst = ["revm/blst"]
bn = ["revm/bn"]
serde-bincode-compat = [
    "alloy-eips/serde-bincode-compat",
    "op-alloy-consensus/serde-bincode-compat",
]
k256 = []
