[package]
name = "celo-revm"
description = "Celo variant of Revm"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# Workspace
celo-alloy-consensus.workspace = true

# revm
revm.workspace = true
op-revm = { workspace = true, features = ["serde"] }
revm-context-interface.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-evm.workspace = true

# OP Alloy
op-alloy-consensus.workspace = true
alloy-sol-types.workspace = true
alloy-op-evm = { workspace = true, optional = true }

# misc
auto_impl.workspace = true
lazy_static = { workspace = true, features = ["spin_no_std"] }
spin.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
rstest.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
revm-handler.workspace = true

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst", "alloy-op-evm"]
std = [
    "serde?/std",
    "revm/std",
    "tracing/std",
    "alloy-op-evm?/std",
]
alloy-op-evm = ["dep:alloy-op-evm"]
hashbrown = ["revm/hashbrown"]
serde = [
    "dep:serde",
    "revm/serde",
    "op-alloy-consensus/serde",
]
portable = ["revm/portable"]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
]
memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_eip3607 = ["revm/optional_eip3607"]
optional_no_base_fee = ["revm/optional_no_base_fee"]

# See comments in `revm-precompile`
secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
blst = ["revm/blst"]
bn = ["revm/bn"]
serde-bincode-compat = [
    "alloy-eips/serde-bincode-compat",
    "op-alloy-consensus/serde-bincode-compat",
]
k256 = []
