[package]
name = "celo-alloy-consensus"
description = "Celo alloy consensus types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

# OP Alloy
op-alloy-consensus.workspace = true

# Reth (optional, for InMemorySize + SignedTransaction impls)
reth-primitives-traits = { workspace = true, optional = true }
reth-codecs = { workspace = true, optional = true }
reth-db-api = { workspace = true, optional = true }
modular-bitfield = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }

# serde
serde_with = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
rand.workspace = true
bincode = { workspace = true, features = ["serde"] }
serde_json.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-consensus = { workspace = true, features = ["arbitrary"] }
op-alloy-consensus = { workspace = true, features = ["arbitrary"] }
proptest = "1.11"

[features]
default = ["std"]
std = ["alloy-eips/std", "alloy-consensus/std", "reth-primitives-traits?/std"]
reth = ["std", "dep:reth-primitives-traits", "reth-primitives-traits/op", "dep:reth-codecs", "dep:reth-db-api", "dep:modular-bitfield", "dep:bytes", "k256"]
k256 = ["alloy-primitives/k256", "alloy-consensus/k256"]
kzg = ["alloy-eips/kzg", "alloy-consensus/kzg", "std"]
arbitrary = [
    "std",
    "dep:arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/rand",
    "alloy-primitives/arbitrary",
    "op-alloy-consensus/arbitrary",
]
serde = [
    "dep:serde",
    "dep:alloy-serde",
    "alloy-primitives/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "op-alloy-consensus/serde",
]
serde-bincode-compat = [
    "serde_with",
    "alloy-consensus/serde-bincode-compat",
    "op-alloy-consensus/serde-bincode-compat",
]
# Enables k256 so the workspace-level `--features dev` (set in
# `.cargo/mutants.toml`) compiles the signer-recovery tests, which are
# `#[cfg(all(test, feature = "k256"))]`-gated and would surface as false
# survivors during mutation testing of the trait-forwarding code.
#
# Note: `arbitrary` and `serde-bincode-compat` would similarly enable the
# arbitrary/bincode-compat impl mutants, but the latter has a doctest that
# references the (currently private) `serde_bincode_compat` module path —
# enabling it would break `cargo test --doc`. Those impls are excluded in
# `.cargo/mutants.toml` via the `serde_bincode_compat` and `arbitrary::Arbitrary`
# patterns.
dev = ["k256"]

